--- a/src/app/courses/addcourse/add-course.component.html
+++ b/src/app/courses/addcourse/add-course.component.html
@@ -1,28 +1,31 @@
 <h3>Nieuw vak aanmaken</h3>
-<form (ngSubmit)="onSubmit()" #addCourseForm="ngForm">
-  <div class="form-group">
-    <label for="name">Naam</label>
-    <input type="text" class="form-control" id="name"
-           required
-           [(ngModel)]="model.name" name="name"
-           #name="ngModel">
-    <div [hidden]="name.valid || name.pristine"
+
+
+<form [formGroup]="addCourseForm" (ngSubmit)="onSubmit()">
+  <div class="mb-3">
+    <label for="name">Naam*</label>
+    <input type="text" class="form-control"
+           formControlName="name"
+           name="name"
+           id="name">
+    <div [hidden]="!name?.invalid || !name?.dirty"
          class="alert alert-danger">
-      Naam is verplicht
+          Naam is verplicht
     </div>
   </div>
 
-  <div class="form-group">
-    <label for="name">Beschrijving</label>
-    <input type="text" class="form-control" id="description"
-           required
-           [(ngModel)]="model.description" name="description"
-           #description="ngModel">
-    <div [hidden]="description.valid || description.pristine"
+  <div class="mb-3">
+    <label for="name">Beschrijving*</label>
+    <input  id="description"
+            name="description"
+            formControlName="description"
+            type="text"
+            class="form-control">
+    <div [hidden]="!description?.invalid || !description?.dirty"
          class="alert alert-danger">
       Beschrijving is verplicht
     </div>
   </div>
-  <button type="submit" class="btn btn-success" [disabled]="!addCourseForm.form.valid">Aanmaken</button>
+    <button type="submit" [disabled]="!addCourseForm.valid" class="btn btn-primary" >Aanmaken</button>
 </form>
 
