--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-$primary: #288be3;
+$primary: #2d75c3;
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;1,400&display=swap');
-@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
+@import "../node_modules/bootstrap/scss/bootstrap";
 
 body {
   font-family: "Montserrat", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -55,7 +55,7 @@ p {
   display: flex;
   align-items: center;
   color:white;
-  background-color: #288be3;
+  background-color: #2d75c3;
   font-weight: 600;
 }
 
@@ -92,7 +92,7 @@ p {
 a,
 a:visited,
 a:hover {
-  color: #1976d2;
+  color: #2d75c3;
   text-decoration: none;
 }
 
