--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,4 +118,16 @@ footer a {
 
 
 
+
 /* END OF OLD CSS */
+
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  tab-index: -999;
+}
