--- a/src/app/tasks/edittask/edit-task.component.html
+++ b/src/app/tasks/edittask/edit-task.component.html
@@ -88,7 +88,9 @@
                     <input id="totalEffort"
                            name="totalEffort"
                            formControlName="totalEffort"
-                           type="text"
+                           type="number"
+                           min="0"
+                           style="width: 100px;"
                            class="form-control">
                     <div [hidden]="!totalEffort?.invalid || !totalEffort?.dirty"
                          class="alert alert-danger">
