--- a/src/app/tasks/edittask/edit-task.component.html
+++ b/src/app/tasks/edittask/edit-task.component.html
@@ -30,6 +30,19 @@
                         </div>
                     </ng-container>
                 </div>
+              <div class="col">
+                <label for="courseId">Toets</label>
+                <div class="form-check" style="margin-top: 5px">
+                  <input class="form-check-input" type="checkbox"
+                         formControlName="isExam"
+                         name="isExam"
+                         id="isExam"
+                         value="" >
+                  <label class="form-check-label" for="isExam">
+                    Ik ben een toets
+                  </label>
+                </div>
+              </div>
             </div>
             <div class="mb-3 row">
                 <div class="col">
