--- a/src/app/planning/addplanning/add-planning.component.html
+++ b/src/app/planning/addplanning/add-planning.component.html
@@ -22,9 +22,21 @@
                                 id="taskId"
                                  (change)="selectCalendarTask()"
                                 required>
-                            <option [ngValue]="calendarTask.task.id" *ngFor="let calendarTask of calendarTasks">
+                          <optgroup value="0" label="Niet geplande taken">
+                            <option [ngValue]="calendarTask.task.id" *ngFor="let calendarTask of calendarTasks.notFullyPlannedTasks">
                                 ({{calendarTask.course.name}}) {{calendarTask.task.name}} {{calendarTask.task.dueDate}}
                             </option>
+                          </optgroup>
+                          <optgroup value="0" label="Geplande taken">
+                            <option [ngValue]="calendarTask.task.id" *ngFor="let calendarTask of calendarTasks.fullyPlannedTasks">
+                                ({{calendarTask.course.name}}) {{calendarTask.task.name}} {{calendarTask.task.dueDate}}
+                            </option>
+                          </optgroup>
+                          <optgroup value="0" label="Overige">
+                            <option [ngValue]="calendarTask.task.id" *ngFor="let calendarTask of calendarTasks.nonPlannableTasks">
+                                ({{calendarTask.course.name}}) {{calendarTask.task.name}} {{calendarTask.task.dueDate}}
+                            </option>
+                          </optgroup>
                         </select>
 
                         <div [hidden]="!taskId?.invalid || !taskId?.dirty"
