--- a/src/app/planning/editplanning/edit-planning.component.html
+++ b/src/app/planning/editplanning/edit-planning.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="modal-title">Planning toevoegen</h4>
+    <h4 class="modal-title" id="modal-title">Planning bewerken</h4>
     <button
             type="button"
             class="btn-close"
@@ -16,15 +16,27 @@
                 <div class="col">
                     <label for="taskId">Taak*</label>
                     <ng-container *ngIf="calendarTasks$ | async as calendarTasks">
-                        <select  class="form-select" aria-label="Taak"
-                                 formControlName="taskId"
-                                name="taskId"
-                                id="taskId"
-                                 (change)="selectCalendarTask()"
-                                required>
-                            <option [ngValue]="calendarTask.task.id" *ngFor="let calendarTask of calendarTasks">
+                          <select  class="form-select" aria-label="Taak"
+                                   formControlName="taskId"
+                                   name="taskId"
+                                   id="taskId"
+                                   (change)="selectCalendarTask()"
+                                   required>
+                            <optgroup value="0" label="Niet geplande taken">
+                              <option [ngValue]="calendarTask.task.id" *ngFor="let calendarTask of calendarTasks.notFullyPlannedTasks">
                                 ({{calendarTask.course.name}}) {{calendarTask.task.name}} {{calendarTask.task.dueDate}}
-                            </option>
+                              </option>
+                            </optgroup>
+                            <optgroup value="0" label="Geplande taken">
+                              <option [ngValue]="calendarTask.task.id" *ngFor="let calendarTask of calendarTasks.fullyPlannedTasks">
+                                ({{calendarTask.course.name}}) {{calendarTask.task.name}} {{calendarTask.task.dueDate}}
+                              </option>
+                            </optgroup>
+                            <optgroup value="0" label="Overige">
+                              <option [ngValue]="calendarTask.task.id" *ngFor="let calendarTask of calendarTasks.nonPlannableTasks">
+                                ({{calendarTask.course.name}}) {{calendarTask.task.name}} {{calendarTask.task.dueDate}}
+                              </option>
+                            </optgroup>
                         </select>
 
                         <div [hidden]="!taskId?.invalid || !taskId?.dirty"
