--- a/src/app/tasks/edittask/edit-task.component.html
+++ b/src/app/tasks/edittask/edit-task.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="modal-title">Taak toevoegen</h4>
+    <h4 class="modal-title" id="modal-title">Taak wijzigen</h4>
     <button
             type="button"
             class="btn-close"
